[gd_scene load_steps=16 format=3 uid="uid://cphvftnt5nank"]

[ext_resource type="Script" uid="uid://d2ut6fn8a8wfg" path="res://scripts/scripts_control/script_menu/pass_wave.gd" id="1_3oseq"]
[ext_resource type="StyleBox" uid="uid://bj5t7gonyuni8" path="res://fichier_tres/layout_button_menu_hover.tres" id="2_se3di"]
[ext_resource type="Script" uid="uid://dp2gmvv5sbhsb" path="res://scripts/scripts_control/script_menu/shop/shop.gd" id="2_w4s2e"]
[ext_resource type="StyleBox" uid="uid://bcaqsj0r8dkly" path="res://fichier_tres/layout_button_menu.tres" id="3_3oseq"]
[ext_resource type="PackedScene" uid="uid://ct414hrv44mea" path="res://scene/control/card_shop.tscn" id="3_uoe0k"]

[sub_resource type="LabelSettings" id="LabelSettings_00php"]
font_size = 160

[sub_resource type="Animation" id="Animation_m6j0y"]
resource_name = "new_animation_2"

[sub_resource type="Animation" id="Animation_i1llk"]
resource_name = "select_card"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_t68pt"]
_data = {
&"new_animation_2": SubResource("Animation_m6j0y"),
&"select_card": SubResource("Animation_i1llk")
}

[sub_resource type="Animation" id="Animation_w4s2e"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Shop:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Shop:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("show_wave:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("show_wave:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("PanelContainer:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_3oseq"]
resource_name = "shop_go_down"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Shop:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Shop:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(2.2974, 0.31864),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 960)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PanelContainer:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_se3di"]
resource_name = "shop_go_up"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Shop:visible")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Shop:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(0.318, 2.29),
"update": 0,
"values": [Vector2(0, 960), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_xsbf1"]
resource_name = "wave_go_down"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("show_wave:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.85),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 960)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("show_wave:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.866667),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_uoe0k"]
resource_name = "wave_go_up"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("show_wave:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("show_wave:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.85),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 960), Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PanelContainer:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_m6j0y"]
_data = {
&"RESET": SubResource("Animation_w4s2e"),
&"shop_go_down": SubResource("Animation_3oseq"),
&"shop_go_up": SubResource("Animation_se3di"),
&"wave_go_down": SubResource("Animation_xsbf1"),
&"wave_go_up": SubResource("Animation_uoe0k")
}

[node name="Pass_wave" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_3oseq")

[node name="PanelContainer" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="show_wave" type="Control" parent="."]
visible = false
layout_mode = 2
anchors_preset = 0

[node name="wave_label" type="Label" parent="show_wave"]
layout_mode = 2
offset_top = 430.0
offset_right = 1920.0
offset_bottom = 649.0
grow_horizontal = 2
grow_vertical = 2
text = "WAVE 1"
label_settings = SubResource("LabelSettings_00php")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Shop" type="Control" parent="."]
visible = false
z_index = 20
layout_mode = 2
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1080.0
script = ExtResource("2_w4s2e")

[node name="card_obtain_dir" type="Node2D" parent="Shop"]
position = Vector2(1658, 560)

[node name="GridContainer" type="GridContainer" parent="Shop"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 250.0
offset_top = -417.5
offset_right = 1197.5
offset_bottom = 417.5
grow_vertical = 2
theme_override_constants/h_separation = 350
theme_override_constants/v_separation = 450
columns = 3

[node name="Card1" parent="Shop/GridContainer" instance=ExtResource("3_uoe0k")]
layout_mode = 2

[node name="Card2" parent="Shop/GridContainer" instance=ExtResource("3_uoe0k")]
layout_mode = 2

[node name="Card3" parent="Shop/GridContainer" instance=ExtResource("3_uoe0k")]
layout_mode = 2

[node name="Card4" parent="Shop/GridContainer" instance=ExtResource("3_uoe0k")]
layout_mode = 2

[node name="Card5" parent="Shop/GridContainer" instance=ExtResource("3_uoe0k")]
layout_mode = 2

[node name="Card6" parent="Shop/GridContainer" instance=ExtResource("3_uoe0k")]
layout_mode = 2

[node name="pass_wave" type="Button" parent="Shop"]
layout_mode = 0
offset_left = 1563.0
offset_top = 183.0
offset_right = 1760.0
offset_bottom = 296.0
size_flags_vertical = 3
theme_override_font_sizes/font_size = 30
theme_override_styles/hover = ExtResource("2_se3di")
theme_override_styles/normal = ExtResource("3_3oseq")
text = "NEXT WAVE
"

[node name="tot_price" type="Label" parent="Shop"]
layout_mode = 0
offset_left = 1580.0
offset_top = 320.0
offset_right = 1749.0
offset_bottom = 388.0

[node name="AnimationCard" type="AnimationPlayer" parent="Shop"]
libraries = {
&"": SubResource("AnimationLibrary_t68pt")
}

[node name="animationWave" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_m6j0y")
}

[connection signal="pressed" from="Shop/pass_wave" to="." method="_on_pass_wave_pressed"]
